distortion finalisation, loading fixes

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,25 +1,17 @@
 .preloader {
   position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
-  background: var(--background);
-  color: var(--text);
-  pointer-events: none;
-  z-index: 3;
 }
 
 .counter {
-  position: fixed;
-  left: 50px;
-  bottom: 50px;
   display: flex;
-  height: 100px;
-  font-size: 100px;
-  line-height: 102px;
-  clip-path: polygon(0 0, 100% 0, 100% 100px, 0 100px);
-  font-weight: 400;
+  position: fixed;
+  right: 100px;
+  bottom: 65px;
+  height: 150px;
+  font-size: 150px;
+  clip-path: polygon(0 0, 100% 0, 100% 150px, 0 150px);
 }
 
 .counter-1,
@@ -28,16 +20,18 @@
   position: relative;
   top: -15px;
   transition: none;
+  font-family: "sekiro";
 }
 
 .num1offset1 {
   position: relative;
-  right: -35px;
+  right: -53px;
 }
 
-.num1offset2 {
+.num1offset2,
+.num1offset3 {
   position: relative;
-  right: -10px;
+  right: -18px;
 }
 
 .hidden {
