--- a/src/components/home/dawn.css
+++ b/src/components/home/dawn.css
@@ -9,7 +9,6 @@
 .home .left {
   display: flex;
   font-size: var(--title);
-  line-height: 100%;
   color: var(--text);
 }
 
