--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --title: clamp(2rem, 2vw + 1.5rem, 4.5rem);
   --content: clamp(1rem, 1.5vw + 0.75rem, 3rem);
   --description: clamp(1rem, 1vw + 0.5rem, 1.5rem);
+  line-height: 100%;
   transition: all 0.5s ease;
   user-select: none;
 }
